--- a/greenery/models/staging/postgres/_stg_greenery__users.yml
+++ b/greenery/models/staging/postgres/_stg_greenery__users.yml
@@ -13,9 +13,7 @@ models:
       - name: user_last_name
       - name: user_email
       - name: user_phone_number
-      - name: user_created_at_utc
+      - name: created_at_utc
         tests:
           - not_null
       - name: address_guid
-        tests:
-          - not_null
